--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
-spring.application.name=patient-backend
-spring.datasource.url=jdbc:mysql://localhost:3306/patient_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=patient_user
-spring.datasource.password=Patient@123
 
+
+spring.application.name=patient-backend
+
+# --- PostgreSQL Connection ---
+spring.datasource.url=jdbc:postgresql://dpg-d39a9d3e5dus73aodvag-a:5432/patientuser
+spring.datasource.username=patientuser_user
+spring.datasource.password=Z0g1c2yJp9Tp5nMfX9EIkNWbiahRtYex
+
+# --- JPA Settings ---
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-
+# --- Server ---
 server.port=8080
